--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -1,4 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
+        <!-- OJO A LOS IDs: nav_contacts, nav_chats, nav_profile -->
+        <item
+            android:id="@+id/nav_contacts"
+            android:icon="@android:drawable/ic_menu_myplaces"
+            android:title="Contactos" />
 
+        <item
+            android:id="@+id/nav_chats"
+            android:icon="@android:drawable/ic_menu_send"
+            android:title="Chats" />
+
+        <item
+            android:id="@+id/nav_profile"
+            android:icon="@android:drawable/ic_menu_manage"
+            android:title="Perfil" />
 </menu>
