--- a/app/src/main/res/layout/item_message_received.xml
+++ b/app/src/main/res/layout/item_message_received.xml
@@ -1,52 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingTop="4dp"
-    android:paddingBottom="4dp">
+    android:padding="6dp">
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="start"
         android:orientation="vertical"
-        android:background="#FFFFFF"
-        android:padding="8dp"
-        android:layout_marginStart="8dp"
-        android:minWidth="100dp"
-        android:elevation="1dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <!-- Nombre del remitente (opcional en chats 1 a 1) -->
-        <TextView
-            android:id="@+id/tvSenderName"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Usuario"
-            android:textSize="12sp"
-            android:textStyle="bold"
-            android:textColor="#075E54"
-            android:visibility="gone"/>
+        android:padding="10dp"
+        android:background="@drawable/bg_bubble_received"
+        android:minWidth="90dp">
 
         <TextView
             android:id="@+id/tvMessageBody"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Mensaje recibido"
-            android:textColor="#000000"
-            android:textSize="16sp"
-            android:maxWidth="260dp"/>
+            android:textColor="@color/bubble_received_text"
+            android:textSize="16sp"/>
 
         <TextView
             android:id="@+id/tvMessageTime"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="12:01 PM"
+            android:text="12:01"
             android:textSize="10sp"
-            android:textColor="#999999"
-            android:layout_gravity="end"
-            android:layout_marginTop="2dp"/>
+            android:textColor="@color/colorSecondaryText"
+            android:layout_marginTop="4dp"
+            android:gravity="end"/>
     </LinearLayout>
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</FrameLayout>
