--- a/app/src/main/res/layout/item_message_sent.xml
+++ b/app/src/main/res/layout/item_message_sent.xml
@@ -1,41 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingTop="4dp"
-    android:paddingBottom="4dp">
+    android:padding="6dp">
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="end"
         android:orientation="vertical"
-        android:background="#DCF8C6"
-        android:padding="8dp"
-        android:layout_marginEnd="8dp"
-        android:minWidth="100dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-        <!-- Nota: #DCF8C6 es el verde clásico de WhatsApp -->
+        android:padding="10dp"
+        android:background="@drawable/bg_bubble_sent"
+        android:minWidth="90dp">
 
         <TextView
             android:id="@+id/tvMessageBody"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Mensaje enviado"
-            android:textColor="#000000"
-            android:textSize="16sp"
-            android:maxWidth="260dp"/>
+            android:textColor="@color/bubble_sent_text"
+            android:textSize="16sp"/>
 
         <TextView
             android:id="@+id/tvMessageTime"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="12:00 PM"
+            android:text="12:00"
             android:textSize="10sp"
-            android:textColor="#555555"
-            android:layout_gravity="end"
-            android:layout_marginTop="2dp"/>
+            android:textColor="@color/colorSecondaryText"
+            android:layout_marginTop="4dp"
+            android:gravity="end"/>
     </LinearLayout>
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</FrameLayout>
