--- a/app/src/main/res/drawable/bottom_nav_color_selector.xml
+++ b/app/src/main/res/drawable/bottom_nav_color_selector.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:color="@color/icon_tint" android:state_checked="true"/>
-    <item android:color="@color/colorSecondaryText" android:state_checked="false"/>
+    <item android:state_checked="true" android:color="@color/colorAccent"/>
+
+    <item android:state_checked="false" android:color="@color/colorSecondaryText"/>
 </selector>
