--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,24 +6,29 @@
     android:layout_height="match_parent"
     android:background="@color/colorBackground">
 
-    <!-- Fragment container -->
     <FrameLayout
         android:id="@+id/fragment_container"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginBottom="72dp" />
+        android:layout_height="638dp"
+        android:layout_marginBottom="64dp" /> <com.google.android.material.bottomnavigation.BottomNavigationView
+    android:id="@+id/bottom_navigation"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_gravity="bottom"
+    android:background="@color/colorSurface"
+    android:paddingTop="4dp"
+    android:paddingBottom="4dp"
+    app:elevation="16dp"
 
-    <!-- Bottom navigation -->
-    <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:id="@+id/bottom_navigation"
-        android:layout_width="match_parent"
-        android:layout_height="64dp"
-        android:layout_gravity="bottom"
-        android:background="@color/colorSurface"
-        app:itemIconTint="@drawable/bottom_nav_color_selector"
-        app:itemTextColor="@drawable/bottom_nav_color_selector"
-        app:menu="@menu/bottom_nav_menu"
-        app:labelVisibilityMode="labeled"
-        android:elevation="8dp" />
+    app:menu="@menu/bottom_nav_menu"
+
+    app:labelVisibilityMode="labeled"
+    app:itemIconSize="26dp"
+
+    app:itemIconTint="@drawable/bottom_nav_color_selector"
+    app:itemTextColor="@drawable/bottom_nav_color_selector"
+
+    app:itemRippleColor="@color/colorPrimary"
+    />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
