--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -3,16 +3,16 @@
 
         <item
             android:id="@+id/nav_contacts"
-            android:icon="@drawable/ic_universal"
+            android:icon="@drawable/ic_nav_contacts"
             android:title="Contactos" />
 
         <item
             android:id="@+id/nav_chats"
-            android:icon="@drawable/ic_universal"
+            android:icon="@drawable/ic_nav_chats"
             android:title="Chats" />
 
         <item
             android:id="@+id/nav_profile"
-            android:icon="@drawable/ic_universal"
+            android:icon="@drawable/ic_nav_profile"
             android:title="Perfil" />
 </menu>
